Разработан примерный дизайн страницы

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,3 +3,11 @@
   margin: 0 auto;
 }
 
+.category-s{
+  color: white;
+  text-decoration: none;
+}
+
+.category-s:hover{
+  text-decoration: underline;
+}
