написан роут для получения полной информации об посте и продавце

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,3 +11,11 @@
 .category-s:hover{
   text-decoration: underline;
 }
+
+.title-b{
+  color: black;
+  text-decoration: none;
+}
+.title-b:hover{
+  text-decoration: underline;
+}
